# shore_py_bindings

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Readme.md
docker/linux/: Dockerfile
libs/ShoreSDK/: shore.cmake
src/: CMakeLists.txt  main.cpp  pyshore.py
test/: run_shore.py  video.py
